--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h2>Cloud computing labs</h2>
         <p>Our PaaS cloud computing labs in 2025</p>
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
+     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
 </body>
 </html>
